--- a/resume.html
+++ b/resume.html
@@ -5,34 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Document</title>
    
-    <link rel="stylesheet" href="{{url_for('static',filename='/css/index.css')}}">
+        <link rel="stylesheet" href="index.css">
+    
     <style>
-.container {
-  border-radius: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-
-}
-
-.container img {
-
-  border-radius: 30px;
-  height: 100rem;
-  width: 95rem;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
-}
-
-.container video {
-  background-color: #141519;
-  border-radius: 30px;
-  width: 80rem;
-  height: 60rem;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
-}
 
     </style>
 </head>
@@ -43,12 +20,12 @@
             <h1>My </i><span> Resume</span> 🗒️</h1>
         </header>
         <div class="container">
-            <img src="{{url_for('static',filename='/image/profile-pic.png')}}" alt="">
+            <iframe src="anshul_resume.pdf" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="download_container">
 
-            <a href="" download="" class="btn"> <span></span>
+            <a href="anshul_resume.pdf" download="" class="btn"> <span></span>
                 <span></span>
                 <span></span>
                 
