link to bank website

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p>bank website using flask,sql,
               app.
             </p>
-            <a href="/bank">Read More</a>
+            <a href="https://github.com/anshulkashyap1234/banking_web.git">Read More</a>
           </div>
         </div>
       </div>
