--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <p>online food order website using flask and sql
               app.
             </p>
-            <a href="#">Read More</a>
+            <a href="https://github.com/anshulkashyap1234/-food-ordering">Read More</a>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
         <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
         <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
         <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
-        <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
+        <a href="#projects"><i class="fas fa-chevron-circle-right"></i> Projects</a>
 
       </div>
 
