--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     <header class="header">
-      <a href="/" class="logo"><i class="fab fa-python"></i> Anshul Kashyap</a>
+      <a href="/" class="logo"><i class="fab fa-python"></i> Portfolio </a>
 
 
 
