--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div id="my_self">
         <p>Hey! my name is anshul kashyap. I'm an aspiring python developer.i have pursuing my b.tech in s.d college of
           engginering and Technology muzaffarnagar.i am mainly skilled with <span class="language">c,python</span> also
-          proficient in <span class="language">data structure and algorithms</span>.</p>
+          proficient in <span class="language">sql</span>.</p>
         <div class="box-container">
           <div class="box">
             <p><span> age: </span> 20</p>
