--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
     </div>
     <div class="image">
-      <img class="tilt" src="Resize Image To WhatsApp Profile Size Without Cropping.gif" alt="">
+      <img class="tilt" src="Resize Image To WhatsApp Profile Size Without Cropping.jpeg" alt="">
     </div>
   </section>
   <section class="about" id="about">
