--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <div data-w-id=7f6dc743-e2a4-2c1e-4831-8aecb80bf4f5 class="w-layout-grid timeline-item">
                     <div id=w-node-_7f6dc743-e2a4-2c1e-4831-8aecb80bf4f6-ab6902f0 class=timeline-left>
                         <div class=left-wrapper>
-                            <div class=work-name>School Assembely</div>
+                            <div class=work-name>School Assembly</div>
                             <div class=tags-wrapper>
                                 <div class=tags>Attendce System</div>
                                 <div class=tags>Ai model</div>
