--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
                 <div class=content>
                     <h3>Web Development</h3>
-                    <p>Ducat - IT Training Insitute</p>
+                    <p>Ducat - IT Training institute</p>
                     <h4>2022-2023 | Completed</h4>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                 </div>
                 <div class=content>
                     <h3>PROFESSIONAL QUALIFICATION</h3>
-                    <p>s.d college of engg. and tech.muzaffarnagar</p>
+                    <p>S.D college of engg. and tech. muzaffarnagar</p>
                     <p> B.Tech</p>
                     <h4>2020-2024 | Completed</h4>
                 </div>
@@ -268,7 +268,7 @@
                 </div>
                 <div class=content>
                     <h3>ACADEMIC QUALIFICATION </h3>
-                    <p>L.J.P.S.V.M inter collage jansat road muzaffarnagar</p>
+                    <p>L.J.P.S.V.M inter collage jansath road muzaffarnagar</p>
                     <h4>2016-2020 | Completed</h4>
                 </div>
             </div>
@@ -297,7 +297,7 @@
                     <h4>2023-2024 | Completed</h4>
                 </div>
             </div>
-            <div class=box>
+            <!-- <div class=box>
                 <div class=eduimage>
                     <img draggable=false src=/static/images/colleg_project.png alt style=width:404px;height:200px>
                 </div>
@@ -309,7 +309,7 @@
                     </p>
                     <h4>2024 | Currently Working</h4>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class=skills id=skills>
@@ -355,7 +355,7 @@
                                 <div class=tags>Train Finder</div>
                                 <div class="tags last">Indian Railway</div>
                             </div>
-                            <a href=http://farzinzaman.webflow.io/works/aztecs-esports-website
+                            <a href="#"
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -378,7 +378,7 @@
                                 <div class=tags>NLP</div>
                                 <div class="tags last">Data science</div>
                             </div>
-                            <a href=http://farzinzaman.webflow.io/works/chamillion-website
+                            <a href="#"
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -397,11 +397,11 @@
                         <div class=left-wrapper>
                             <div class=work-name>School Assembly</div>
                             <div class=tags-wrapper>
-                                <div class=tags>Attendce System</div>
-                                <div class=tags>Ai model</div>
+                                <div class=tags>Attendence System</div>
+                                <div class=tags>Ai Model</div>
                                 <div class="tags last">Machine Learing</div>
                             </div>
-                            <a href=http://farzinzaman.webflow.io/works/blocknubie-website
+                            <a href='#'
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -420,11 +420,11 @@
                         <div class=left-wrapper>
                             <div class=work-name>Todo App website</div>
                             <div class=tags-wrapper>
-                                <div class=tags>webapplication</div>
+                                <div class=tags>Web Application</div>
                                 <div class=tags>Web Development</div>
                                 <div class="tags last">Concept</div>
                             </div>
-                            <a href=http://farzinzaman.webflow.io/works/team-app-website
+                            <a href='#'
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -441,13 +441,13 @@
                 <div data-w-id=41dce88a-4404-33a5-a892-962967bb440c class="w-layout-grid timeline-item">
                     <div id=w-node-_41dce88a-4404-33a5-a892-962967bb440d-ab6902f0 class=timeline-left>
                         <div class=left-wrapper>
-                            <div class=work-name>product hunter App</div>
+                            <div class=work-name>Product Hunter App</div>
                             <div class=tags-wrapper>
                                 <div class=tags>Web Crowling</div>
                                 <div class=tags>Web Scrapping</div>
                                 <div class="tags last">Multithreading</div>
                             </div>
-                            <a href=http://farzinzaman.webflow.io/works/chat-app-website
+                            <a href='#'
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -478,7 +478,7 @@
                     experiences consistently.</p>
             </div>
             <div data-w-id=feb62a5d-a98d-27f1-dd06-bd4e34e6f0df style=opacity:1 class=design>
-                <h1 class=heading-10>Web scarping</h1>
+                <h1 class=heading-10>Web Scraping</h1>
                 <p class=paragraph-6>Skilled in web scraping using Python's BeautifulSoup and Scrapy, I adeptly extract
                     and parse data from various websites. My expertise includes crafting scripts for e-commerce product
                     details, market insights, and research data, ensuring precise and structured results. I leverage
