--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                 <div class=tags>Train Finder</div>
                                 <div class="tags last">Indian Railway</div>
                             </div>
-                            <a href="#"
+                            <a href="https://mytrain.onrender.com/"
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -378,7 +378,7 @@
                                 <div class=tags>NLP</div>
                                 <div class="tags last">Data science</div>
                             </div>
-                            <a href="#"
+                            <a href="http://anshul8112.pythonanywhere.com/"
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -401,7 +401,7 @@
                                 <div class=tags>Ai Model</div>
                                 <div class="tags last">Machine Learing</div>
                             </div>
-                            <a href='#'
+                            <a href='https://github.com/anshulkashyap1234/face_recognization.git'
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -424,7 +424,7 @@
                                 <div class=tags>Web Development</div>
                                 <div class="tags last">Concept</div>
                             </div>
-                            <a href='#'
+                            <a href='https://schoolassembly.pythonanywhere.com/'
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
@@ -447,7 +447,7 @@
                                 <div class=tags>Web Scrapping</div>
                                 <div class="tags last">Multithreading</div>
                             </div>
-                            <a href='#'
+                            <a href='http://producthunting.pythonanywhere.com/'
                                 class="see-this-project w-inline-block">
                                 <div class=text-block-2>SEE THIS PROJECT</div>
                             </a>
